--- a/4.html
+++ b/4.html
@@ -37,11 +37,7 @@
                 camera.up.x = 0;
                 camera.up.y = 1;
                 camera.up.z = 0;
-                camera.lookAt({
-                    x : 0,
-                    y : 0,
-                    z : 0
-                });
+                camera.lookAt(0, 0, 0);
             }
 
             var scene;
