--- a/10.html
+++ b/10.html
@@ -37,7 +37,7 @@
         const content = document.getElementById('content');
         const width = content.clientWidth;
         const height = content.clientHeight;
-        scene = new t.Scene()
+        const scene = new t.Scene()
 
         renderer = new t.WebGLRenderer({
             antialias: true
